--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "pubspec.yaml": true,
     "lib/flutter_flow/function_changes.json": true,
     ".vscode/settings.json": true
-  }
+  },
+  "liveServer.settings.port": 5501
 }
